--- a/project/matlab/log_m4,n256,qTO157.html
+++ b/project/matlab/log_m4,n256,qTO157.html
@@ -29,9 +29,9 @@
       transition: opacity 0.4s ease-out;
     }
     circle {
-      -webkit-transition: all 0.4s ease-out;
+      /* -webkit-transition: all 0.4s ease-out;
       -moz-transition: all 0.4s ease-out;
-      transition: all 0.4s ease-out;
+      transition: all 0.4s ease-out; */
     }
   </style>
 </head>
@@ -42,10 +42,10 @@
   </div>
 
   <script>
-    charter("#dataviz", "log_m45,n65,qTO167.csv", {
+    charter("#dataviz", "log_m4,n256,qTO157.csv", {
       variable: "q",
       keys: ["M0", "M1"],
-      title: "m=45, n=64, variable q",
+      title: "m=4, n=256, variable q",
     });
   </script>
 </body>
