--- a/project/matlab/d_vals_badS.html
+++ b/project/matlab/d_vals_badS.html
@@ -30,7 +30,7 @@
     }
   </style>
 </head>
-<body>
+<body style="display: flex; flex-direction: column; align-items: center;">
   <div class="nap">
     <div id="dataviz"></div>
     <p class="ctrl">
