--- a/project/matlab/log_mTO500,n12,q23.html
+++ b/project/matlab/log_mTO500,n12,q23.html
@@ -35,7 +35,7 @@
     }
   </style>
 </head>
-<body>
+<body style="display: flex; flex-direction: column; align-items: center;">
   <!-- Create a div where the graph will take place -->
   <div class="nap">
     <div id="dataviz"></div>
